--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 Spring.jpa.hibernate.dll=true
 spring.jpa.hibernate.dll-auto=none
 spring.jpa.show-sql=true
-spring.datasource.url=jdbc:mysql://localhost:3307/curso2024
+spring.datasource.url=jdbc:mysql://localhost:3306/capacitacionSpringDB
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=Nejua1998*
 spring.datasource.drive-class-name=com.mysql.jdbc.Driver
